--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Exercícios de React</title>
+    <title>Exercicios de React</title>
+    
 </head>
 <body>
     <div id="app"></div>
